--- a/destiny-chat-client/packages.config
+++ b/destiny-chat-client/packages.config
@@ -7,4 +7,6 @@
   <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net452" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
+  <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net452" />
 </packages>
