--- a/destiny-chat-client/destiny-chat-client.csproj
+++ b/destiny-chat-client/destiny-chat-client.csproj
@@ -129,6 +129,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Classes\Extensions.cs" />
+    <Compile Include="Classes\Tray.cs" />
     <Compile Include="Classes\WindowHandler.cs" />
     <Compile Include="Enums\Emote.cs" />
     <Compile Include="Enums\Feature.cs" />
