--- a/destiny-chat-client/destiny-chat-client.csproj
+++ b/destiny-chat-client/destiny-chat-client.csproj
@@ -128,6 +128,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\Distance.cs" />
     <Compile Include="Classes\Extensions.cs" />
     <Compile Include="Classes\Tray.cs" />
     <Compile Include="Classes\WindowHandler.cs" />
