--- a/destiny-chat-client/packages.config
+++ b/destiny-chat-client/packages.config
@@ -2,11 +2,17 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="Costura.Fody" version="1.3.3.0" targetFramework="net452" developmentDependency="true" />
+  <package id="EntityFramework" version="6.0.0" targetFramework="net461" />
   <package id="Fody" version="1.29.4" targetFramework="net452" developmentDependency="true" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net452" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
+  <package id="System.Data.SQLite" version="1.0.105.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.105.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.105.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.ProtectedData" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
   <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net452" />
 </packages>
