--- a/destiny-chat-client/destiny-chat-client.csproj
+++ b/destiny-chat-client/destiny-chat-client.csproj
@@ -121,6 +121,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\Components\ComboMessage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\Components\Message.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -153,12 +157,14 @@
     <Compile Include="Classes\Converters.cs" />
     <Compile Include="Classes\Distance.cs" />
     <Compile Include="Classes\Extensions.cs" />
+    <Compile Include="Classes\FlashWindowHelper.cs" />
     <Compile Include="Classes\Tray.cs" />
     <Compile Include="Classes\WindowHandler.cs" />
     <Compile Include="Enums\Emote.cs" />
     <Compile Include="Enums\Feature.cs" />
     <Compile Include="Enums\Flair.cs" />
     <Compile Include="Enums\ServerError.cs" />
+    <Compile Include="Enums\Token.cs" />
     <Compile Include="Models\Browser\Firefox\Cookie.cs" />
     <Compile Include="Models\Browser\Firefox\OriginAttributes.cs" />
     <Compile Include="Models\Data.cs" />
@@ -177,8 +183,10 @@
     <Compile Include="Repositories\SoundRepository.cs" />
     <Compile Include="Services\ChatService.cs" />
     <Compile Include="Services\CookieFinderService.cs" />
+    <Compile Include="Services\DataConverterService.cs" />
     <Compile Include="Services\Interfaces\IChatService.cs" />
     <Compile Include="Services\Interfaces\ICookieFinderService.cs" />
+    <Compile Include="Services\Interfaces\IDataConverterService.cs" />
     <Compile Include="ViewModelLocator.cs" />
     <Compile Include="ViewModels\ChatViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
@@ -187,6 +195,9 @@
     </Compile>
     <Compile Include="Views\Components\ChatBar.xaml.cs">
       <DependentUpon>ChatBar.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Components\ComboMessage.xaml.cs">
+      <DependentUpon>ComboMessage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Components\Message.xaml.cs">
       <DependentUpon>Message.xaml</DependentUpon>
