Delegate word suggestor logic to its own static class

--- a/destiny-chat-client/destiny-chat-client.csproj
+++ b/destiny-chat-client/destiny-chat-client.csproj
@@ -157,6 +157,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\WordSuggestor.cs" />
     <Compile Include="Classes\Behaviors.cs" />
     <Compile Include="Classes\Converters.cs" />
     <Compile Include="Classes\Distance.cs" />
